--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Trace</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="login">Login</string>
+    <string name="forgot_your_password"><u>Forgot your password ?</u></string>
+    <string name="dont_have_an_account">Don\'t have an account ?</string>
+    <string name="sign_up"><u>Sign Up !</u></string>
 </resources>
