--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="forgot_your_password"><u>Forgot your password ?</u></string>
     <string name="dont_have_an_account">Don\'t have an account ?</string>
     <string name="sign_up"><u>Sign Up !</u></string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
 </resources>
